--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -134,7 +134,7 @@ table {
 th,
 td {
   padding: 12px;
-  text-align: left;
+  text-align: center;
   border-bottom: 1px solid #ddd;
 }
 
